# lawglance

./: .env  .gitignore  Constituion_Pdf_Injestion_for_LawGlance.ipynb  Dockerfile  LICENSE.md  Readme.md  app.py  cache.py  chains.py  db.sqlite3  docker-compose.yml  lawglance_crewai.ipynb  lawglance_main.py  main.py  manage.py  packages.txt  prompts.py  pyproject.toml  requirements.txt  test.ipynb
.github/workflows/: codeql.yml
.ipynb_checkpoints/: lawglance_crewai-checkpoint.ipynb
chatbot/: urls.py  views.py
chroma_db_legal_bot_part1/55972a0b-dc22-4056-9b6c-7fae6ca90f6e/: index_metadata.pickle
chroma_db_legal_bot_part1/61eae45d-180b-4511-9df2-7aca41837087/: index_metadata.pickle
config/: prompts.yaml
docs/: LawGlance_Documentation.md
niyam_saha_ai/: asgi.py  settings.py  urls.py  wsgi.py
templates/: chatbot.html
