[project]
name = "lawglance"
dynamic = ["version"]
authors = [{name = "https://lawglance.com/" }]
maintainers = [
    {name = "Sreejith G", email = "gsreejith828@gmail.com"},
    {name = "Midhun M I", email = "midhunmi2011@gmail.com"},
    {name = "Meenu Dev", email = "mee.dev03@gmail.com"},
    {name = "Brijesh", email = "brijesh@curvelogics.com"},
    {name = "Haritha C", email = "harithac.contactmail@gmail.com"},
]
description = "Your AI-Powered Legal Assistant"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["git", "law", "llm", "langchain", "langflow", "RAG"]
license = { text = "MIT" }
dependencies = [
    "chroma-hnswlib==0.7.6",
    "chromadb==0.5.11",
    "dependencies>=7.7.1",
    "langchain==0.2.9",
    "langchain-chroma==0.1.4",
    "langchain-community==0.2.10",
    "langchain-core==0.2.24",
    "langchain-openai>=0.1.19",
    "langchain-text-splitters==0.2.2",
    "langchainhub==0.1.20",
    "langdetect==1.0.9",
    "langsmith==0.1.93",
    "openai>=1.66.3",
    "pymupdf==1.24.9",
    "pymupdfb==1.24.9",
    "streamlit==1.37.0",
]

[project.optional-dependencies]
rich = ["rich>=13.9.4"]
cli = ["python-dotenv>=1.0.0"]

dev-dependencies = [
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "ruff>=0.8.5",
    "trio>=0.26.2",
    "pytest-flakefinder>=1.1.0",
    "pytest-xdist>=3.6.1",
    "pytest-examples>=0.0.14",
]

[tool.uv.sources]
lawglance = { workspace = true }

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[tool.hatch.build.targets.wheel]
packages = ["./"]
